--- a/css/base.css
+++ b/css/base.css
@@ -156,11 +156,11 @@ h1 {
     top: 0;
 }
 .container .search .big-box.tags .slide-arrow.left {
-    background: #292929 url(../img/slider-left.jpg) no-repeat 0 0;
+    background: transparent url(../img/slider-left.png) no-repeat 0 0;
     left: 0;
 }
 .container .search .big-box.tags .slide-arrow.right {
-    background: #292929 url(../img/slider-right.jpg) no-repeat 0 0;
+    background: transparent url(../img/slider-right.png) no-repeat 0 0;
     right: 0;
 }
 
